# htmx-test

./: .gitignore  README.md  main.py  pyproject.toml
templates/: counter.html.jinja  index.html.jinja  index.jinja  todo.jinja  todos.jinja
